# ai-learning-platform-ver.1

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  simple_test.py  test_azure_openai.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: exercise.py  health.py  learning_path.py  quiz.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/models/: base.py  exercise.py  learning_path.py  quiz.py
backend/app/schemas/: exercise.py  learning_path.py  quiz.py  response.py
backend/app/services/: ai_service.py  exercise_service.py  learning_path_service.py  quiz_service.py
backend/app/utils/: ai_prompts.py  validators.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/Common/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  index.ts
frontend/src/context/: AppContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useApi.ts  useLearningPath.ts  useLocalStorage.ts  useProgress.ts
frontend/src/pages/: DashboardPage.tsx  ExercisePage.tsx  HomePage.tsx  LearningPathPage.tsx  QuizPage.tsx
frontend/src/services/: api.ts  exercise.service.ts  learningPath.service.ts  quiz.service.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  exercise.ts  learningPath.ts  quiz.ts
frontend/src/utils/: constants.ts  helpers.ts  validators.ts
(+18 files in other folders)
